# mcp-weather-api

./: Cargo.toml  LICENSE.txt  README.md
src/: lib.rs
tests/: weather_api_test.rs
wit/: world.wit
