[package]
name = "mcp-weather-api"
version = "0.0.1"
description = "An MCP for the Weather API which implements the wasix-mcp.router component interface."
authors = ["Maarten Ectors <maarten@ectors.com>"]
license = "MIT"
readme = "README.md" 
edition = "2021"

[dependencies]
wit-bindgen = "0.41.0"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasmtime = "31.0.0"
wasmtime-wasi = "31.0.0"
