[package]
name = "mcp-weather-api"
version = "0.0.1"
description = "An MCP for the Weather API which implements the wasix-mcp.router component interface."
authors = ["Maarten Ectors <maarten@ectors.com>"]
license = "MIT"
readme = "README.md" 
edition = "2021"

[dependencies]
anyhow = "1.0.97"
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
urlencoding = "2.1.3"
wasi = "0.14.2"
wit-bindgen = "0.41.0"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasmtime = "31.0.0"
wasmtime-wasi = "31.0.0"
wasmtime-wasi-http = "31.0.0"
