[package]
name = "mcp-weather-api"
version = "0.0.1"
description = "An MCP for the Weather API which implements the wasix-mcp.router component interface."
authors = ["Maarten Ectors <maarten@ectors.com>"]
license = "MIT"
readme = "README.md" 
edition = "2021"

[dependencies]
anyhow = "1.0.98"
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
urlencoding = "2.1.3"
wasi = "0.14.2"
wit-bindgen = "0.42.1"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasmtime = "32.0.0"
wasmtime-wasi = "32.0.0"
wasmtime-wasi-http = "32.0.0"
tracing = "0.1.41"
